--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "dhalia"
+name = "dahlia"
 version = "0.0.1"
 description = "A parser combinator as a trait."
 authors = ["watcol <potfman@gmail.com>"]
-repository = "https://github.com/watcol/dhalia"
+repository = "https://github.com/watcol/dahlia"
 keywords = ["parser-combinator", "parser"]
 categories = ["parsing"]
 license = "MIT"
